// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Host Summary Component it renders the default Host Summary 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiFlexGroup e1v2bxdw0 emotion-euiFlexGroup-responsive-l-flexStart-stretch-row-OverviewWrapper"
    data-test-subj="host-overview"
  >
    <button
      aria-label="Inspect"
      class="euiButtonIcon inspectButtonComponent emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
      data-test-subj="inspect-icon-button"
      disabled=""
      title="Inspect"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="inspect"
      />
    </button>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            data-provider-id="draggableId.content.host-id-renderer-default-draggable-ip-overview-host-id"
            tabindex="-1"
          >
            <span
              class="c1"
              data-test-subj="render-content-host.id"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                aa7ca589f1b8220002f2fc61c64cfbf1
              </span>
            </span>
          </div>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          First seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Last seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          IP addresses
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_ip-10_142_0_7"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.ip"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      <button
                        class="euiLink emotion-euiLink-primary"
                        data-test-subj="securitySolutionFlyoutLink"
                        type="button"
                      >
                        10.142.0.7
                      </button>
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  class="euiPopover emotion-euiPopover-inline-block"
                  id="popover"
                >
                   ,
                  <button
                    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
                    data-test-subj="DefaultFieldRendererOverflow-button"
                    type="button"
                  >
                    <span
                      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate euiButtonEmpty__text"
                      >
                        +1 
                        More
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          MAC addresses
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_mac-42:01:0a:8e:00:07"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.mac"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      42:01:0a:8e:00:07
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Platform
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_platform-debian"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.platform"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      debian
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Operating system
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_name-Debian GNU/Linux"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.name"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      Debian GNU/Linux
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Family
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_family-debian"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.family"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      debian
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Version
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_version-9 (stretch)"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.version"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      9 (stretch)
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Architecture
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_architecture-x86_64"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.architecture"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      x86_64
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Cloud provider
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_provider-gce"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.provider"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      gce
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Region
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_region-us-east-1"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.region"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      us-east-1
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Instance ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_instance_id-423232333829362673777"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.instance.id"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      423232333829362673777
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Machine type
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_machine_type-custom-4-16384"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.machine.type"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      custom-4-16384
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`Host Summary Component it renders the panel view Host Summary 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiFlexGroup e1v2bxdw0 emotion-euiFlexGroup-l-flexStart-stretch-column-OverviewWrapper"
    data-test-subj="host-overview"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <div
            data-provider-id="draggableId.content.host-id-renderer-default-draggable-ip-overview-host-id"
            tabindex="-1"
          >
            <span
              class="c1"
              data-test-subj="render-content-host.id"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                aa7ca589f1b8220002f2fc61c64cfbf1
              </span>
            </span>
          </div>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          First seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Last seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          IP addresses
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_ip-10_142_0_7"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.ip"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      <button
                        class="euiLink emotion-euiLink-primary"
                        data-test-subj="securitySolutionFlyoutLink"
                        type="button"
                      >
                        10.142.0.7
                      </button>
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  class="euiPopover emotion-euiPopover-inline-block"
                  id="popover"
                >
                   ,
                  <button
                    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
                    data-test-subj="DefaultFieldRendererOverflow-button"
                    type="button"
                  >
                    <span
                      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate euiButtonEmpty__text"
                      >
                        +1 
                        More
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          MAC addresses
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_mac-42:01:0a:8e:00:07"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.mac"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      42:01:0a:8e:00:07
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Platform
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_platform-debian"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.platform"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      debian
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Operating system
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_name-Debian GNU/Linux"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.name"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      Debian GNU/Linux
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Family
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_family-debian"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.family"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      debian
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Version
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_os_version-9 (stretch)"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.os.version"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      9 (stretch)
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Architecture
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-host_architecture-x86_64"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-host.architecture"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      x86_64
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-row-left-baseStyles-DescriptionListStyled"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Cloud provider
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_provider-gce"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.provider"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      gce
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Region
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_region-us-east-1"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.region"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      us-east-1
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Instance ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_instance_id-423232333829362673777"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.instance.id"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      423232333829362673777
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Machine type
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
            data-test-subj="DefaultFieldRendererComponent"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <div
                  data-provider-id="draggableId.content.default-field-renderer-default-draggable-host-overview-cloud_machine_type-custom-4-16384"
                  tabindex="-1"
                >
                  <span
                    class="c1"
                    data-test-subj="render-content-cloud.machine.type"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    >
                      custom-4-16384
                    </span>
                  </span>
                </div>
              </div>
               
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
